src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Name_Text_NOT_EDITABLE__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is a KVH Internal Account -This field is NOT EDITABLE</inlineHelpText>
        <label>Account Name Text (NOT EDITABLE)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <description>for future use. Should be programatically set by &apos;turnover&quot; field (Owner: SF Admin)</description>
        <inlineHelpText>Active = doing business with. Inactive = no longer do business with</inlineHelpText>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Out of Business</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                    <default>true</default>
                    <label>In Review</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acct_ID_18_Char__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>18 Character ID for linking from external sources</inlineHelpText>
        <label>Acct ID - 18 Char</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_KV_Vessel_Account__c</fullName>
        <formula>IF( Active_Orders__c &gt;0 , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the there are 1 or more InvoiceIT orders on the Accouunt Check the box.</inlineHelpText>
        <label>Active KV Vessel Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Orders__c</fullName>
        <label>Active Orders</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Built_Vessel_Year__c</fullName>
        <description>Used for Platform Record Types, Maps to Sea-Web field</description>
        <label>Built (Vessel Year)</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Allocation_Rule__c</fullName>
        <label>Cash Allocation Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oldest Invoice First</fullName>
                </value>
                <value>
                    <fullName>No Allocation</fullName>
                </value>
                <value>
                    <fullName>Match Invoice Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_IMO__c</fullName>
        <description>This Company IMO number field coincides with Sea-Web&apos;s database for Company IMO numbers which are assigned to each and every legal entity (registered company). This field is meant to map to a Parent Company IMO and NOT the Vessel (or Platform) IMO number</description>
        <inlineHelpText>This Company IMO number field coincides with Sea-Web&apos;s database for Company IMO numbers which are assigned to each and every legal entity (registered company). This field is meant to map to a Parent Company IMO and NOT the Vessel (or Platform) IMO number</inlineHelpText>
        <label>Company IMO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Of_Registration__c</fullName>
        <description>Used for Platform Record Types</description>
        <label>Country Of Registration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crew_Nationality_ies__c</fullName>
        <label>Crew Nationalities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Number__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <label>Customer Account Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Customer_Class__c</fullName>
        <description>Categorize your customers so you can configure different discount levels for them.</description>
        <inlineHelpText>Categorize your customers so you can configure different discount levels for them.</inlineHelpText>
        <label>Customer Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                    <default>true</default>
                    <label>*</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Invoiced__c</fullName>
        <label>Date Invoiced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Statement_Sent__c</fullName>
        <label>Date Statement Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadweight__c</fullName>
        <label>Deadweight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Send_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Send Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Crew_Size__c</fullName>
        <label>Estimated Crew Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext__c</fullName>
        <description>Phone Extension</description>
        <label>Ext.</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Old Id from KVH</inlineHelpText>
        <label>Legacy Account ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <description>Validated by AddressTools</description>
        <inlineHelpText>This is the Vessel&apos;s flag reported on the activation form.</inlineHelpText>
        <label>Flag</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fleet_Ship_Management_Co_Type__c</fullName>
        <label>Ship Management/Fleet Owner Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group Owner</fullName>
                </value>
                <value>
                    <fullName>Registered Owner</fullName>
                </value>
                <value>
                    <fullName>Ship Manager</fullName>
                </value>
                <value>
                    <fullName>Technical Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fleet_Size__c</fullName>
        <description>Added during HM Integration</description>
        <label>Fleet Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generate_Statement__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;queryid=a3J13000000TsDa?pv0=&quot; + Id + 
&quot;~pv1=&quot; + Snapshot_Name__c + &quot;,a3J13000000TsDf?pv0=&quot; + Id + 
&quot;~pv1=&quot; + Snapshot_Name__c + &quot;,a3J13000000TsDk?pv0=&quot; + Id + 
&quot;~pv1=&quot; + Snapshot_Name__c + &quot;,a3J13000002or76?pv0=&quot; + Id + 
&quot;~pv1=&quot; + Snapshot_Name__c + &quot;,a3J13000002or7B?pv0=&quot; + Id + 
&quot;~pv1=&quot; + Snapshot_Name__c + &quot;,a3J13000002or7G?pv0=&quot; + Id + 
&quot;~pv1=&quot; + Snapshot_Name__c + &quot;&amp;templateid=a0C1300001Re2lU&amp;qmode=3&quot; + 
&quot;&amp;EmailRelatedToId=&quot;+ Id + 
&quot;&amp;EmailTemplateId=00X13000001YgEN&quot; + 
&quot;&amp;EmailToId=&quot; + Receive_Statements__c + 
&quot;&amp;ofn=&quot; + Name + &quot; Statement of Accounts&quot; + 
&quot;&amp;FP0=1&quot; + 
&quot;&amp;lg4=1 &quot; + 
&quot;&amp;EmailFromId=0D213000000PD8r&amp;EmailBCC=creditcontrol@videotel.com&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate Statement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Platform_Search__c</fullName>
        <description>This hyperlink is created from Name, Vessel IMO#, MMSI, and Vessel Radio Call sign (whatever is available) and searches Google for those parameters.</description>
        <formula>HYPERLINK(&quot;http://www.google.com/search?q=&quot;+ Name +&quot; &quot;+ Vessel_IMO__c +&quot; &quot;+ MMSI__c +&quot; &quot;+ Vessel_Radio_Call_Sign__c , &quot;Click Here to Search&quot; ,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Searches Google based on available Platform data</inlineHelpText>
        <label>Google Platform Search</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grand_Parent_Account__c</fullName>
        <formula>IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Parent.Name,
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Name,
IF(NOT(ISBLANK(Parent.Parent.Parent.Name)), Parent.Parent.Parent.Name,
IF(NOT(ISBLANK(Parent.Parent.Name)), Parent.Parent.Name,
IF(NOT(ISBLANK(Parent.Name)),Parent.Name,
Name)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Root Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Owner_Location__c</fullName>
        <label>Group Owner Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Owner__c</fullName>
        <label>Group Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Designation__c</fullName>
        <label>Platform Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market_Sector__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>5th wheel</fullName>
                </value>
                <value>
                    <fullName>Antenna Stabilization &amp; Pointing</fullName>
                </value>
                <value>
                    <fullName>Automobiles</fullName>
                </value>
                <value>
                    <fullName>Autonomous Vehicles</fullName>
                </value>
                <value>
                    <fullName>Bulk Carriers</fullName>
                </value>
                <value>
                    <fullName>Charter Coach</fullName>
                </value>
                <value>
                    <fullName>Civilian Government</fullName>
                </value>
                <value>
                    <fullName>Class A Coach</fullName>
                </value>
                <value>
                    <fullName>Class B Vehicle</fullName>
                </value>
                <value>
                    <fullName>Class C</fullName>
                </value>
                <value>
                    <fullName>College/School Bus</fullName>
                </value>
                <value>
                    <fullName>Commercial (for hire)</fullName>
                </value>
                <value>
                    <fullName>Container Ship</fullName>
                </value>
                <value>
                    <fullName>Conversion Van</fullName>
                </value>
                <value>
                    <fullName>Custom Conversion Vehicle</fullName>
                </value>
                <value>
                    <fullName>Dry Cargo</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Emergency Response Vehicles</fullName>
                </value>
                <value>
                    <fullName>Entertainer Coach</fullName>
                </value>
                <value>
                    <fullName>Fishing</fullName>
                </value>
                <value>
                    <fullName>Gimbals</fullName>
                </value>
                <value>
                    <fullName>Gov&apos;t</fullName>
                </value>
                <value>
                    <fullName>Governm&apos;t</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>GPS-denied Navigation</fullName>
                </value>
                <value>
                    <fullName>Inland Waterways</fullName>
                </value>
                <value>
                    <fullName>Law Enforcement</fullName>
                </value>
                <value>
                    <fullName>Limousine/Transport Vehicle</fullName>
                </value>
                <value>
                    <fullName>Long-haul Truck</fullName>
                </value>
                <value>
                    <fullName>Marketing Vehicle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installation_Type__c</fullName>
        <label>Installation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Installation_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Balance__c</fullName>
        <label>Invoice Balance</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Currency__c</fullName>
        <label>Invoice Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD or Euro Upon Request</fullName>
                </value>
                <value>
                    <fullName>Local Currency Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Delivery_Type__c</fullName>
        <description>It provides either Print/Email/Email &amp; Print for invoice</description>
        <inlineHelpText>PRINT- This is when the Customer receives the invoice in the Post (by mail).
PRINT &amp; STAMP- Customer receives the invoice in the Post (by mail), BUT the invoice has a company stamp on it, to verify it is an original invoice.</inlineHelpText>
        <label>Invoice Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Email &amp; Print</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Print &amp; Stamp</fullName>
                </value>
                <value>
                    <fullName>Web Upload</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KVH_Sales_Office__c</fullName>
        <description>This field represents Sales office with which the account is associated. It provides a means for summary reporting by each particular Sales office. This Picklist should always match the corresponding Picklist in the Lead Object</description>
        <label>Sales Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KV UK</fullName>
                </value>
                <value>
                    <fullName>KV ASIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KVH_Service_Office__c</fullName>
        <description>This field described the KVH service office to which the account is associated. It provides for marketing support, and reporting to field service managers.</description>
        <label>KVH Service Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KU</fullName>
                </value>
                <value>
                    <fullName>KE</fullName>
                </value>
                <value>
                    <fullName>KC</fullName>
                </value>
                <value>
                    <fullName>KN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KV_Account_Notes__c</fullName>
        <inlineHelpText>Misc. Acct Fields imported from BMS</inlineHelpText>
        <label>KV Account Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KV_Asia_Account_Code__c</fullName>
        <label>KV Asia Account Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KV_Company_Code__c</fullName>
        <inlineHelpText>KV CompanyCode</inlineHelpText>
        <label>KV Company Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KV_Company_Ref_No__c</fullName>
        <inlineHelpText>KV CompanyRefNo</inlineHelpText>
        <label>KV Company Ref No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KV_Company_Type__c</fullName>
        <description>Company Type Label by Videotel</description>
        <label>KV Company Type</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KV_CustAcctNoRecID__c</fullName>
        <label>KV CustAcctNoRecID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KV_CustAcctNo__c</fullName>
        <inlineHelpText>KV CustAcctNo</inlineHelpText>
        <label>KV CustAcctNo</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KV_SalesAgentText__c</fullName>
        <label>KV SalesAgentText</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KV_Sales_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KV Sales Agent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (KV Sales Agent)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KV_Sandbox_ID__c</fullName>
        <inlineHelpText>18-digit ID for this account from the Videotel sandbox</inlineHelpText>
        <label>KV Sandbox ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KV_VslCode__c</fullName>
        <inlineHelpText>BMS VslCode</inlineHelpText>
        <label>KV VslCode</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is for to identify strategic accounts.</description>
        <inlineHelpText>This field is to be check if this is a Key Strategic Account. Only the Account Owner and their Manager are to update this field.</inlineHelpText>
        <label>Key Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <description>Used for Platform Record Types, Maps to Sea-Web field</description>
        <label>Length</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMSI__c</fullName>
        <description>This is the MMSI number for the vessel as reported on the activation form</description>
        <inlineHelpText>MMSI as reported on the activation form (9 digits)</inlineHelpText>
        <label>MMSI</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Email__c</fullName>
        <label>Main Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Maker_Builder__c</fullName>
        <label>Maker/Builder</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maritime_Links__c</fullName>
        <description>Links to Maritime websites that may provide additional ship details</description>
        <formula>IF( ISBLANK( Vessel_IMO__c ) ,
            &quot;Populate the Vessel IMO# Field to enable links&quot;,
            HYPERLINK(&quot;http://www.marinetraffic.com/ais/shipdetails.aspx?imo=&quot;+ Vessel_IMO__c , &quot;Marine Traffic&quot;,&quot;_blank&quot;)+&quot; | &quot;+HYPERLINK(&quot;http://maritime-connector.com/ship/&quot;+ Vessel_IMO__c , &quot;Maritime Connector&quot;,&quot;_blank&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>These links require an IMO#</inlineHelpText>
        <label>Maritime Links</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Sector__c</fullName>
        <label>Market Sector</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Marine</fullName>
                </value>
                <value>
                    <fullName>Maritime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>Update Primary Market</description>
        <inlineHelpText>Update Primary Market</inlineHelpText>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Leisure</fullName>
                </value>
                <value>
                    <fullName>Commercial/SATCOM, TV &amp; Network Mgmt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_Ship__c</fullName>
        <description>Used for Platform Record Types, Maps to Sea-Web field</description>
        <label>Name of Ship</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Naval_Architect__c</fullName>
        <label>Naval Architect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Cabins__c</fullName>
        <label>Number of Cabins</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_in_Trial_Stage__c</fullName>
        <inlineHelpText>Populated by Workflow Rule on the Opportunity</inlineHelpText>
        <label>Opportunity in Trial Stage</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Balance__c</fullName>
        <label>Order Balance</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner_Operator_Role__c</fullName>
        <label>Ship Owner/Operator Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brokerage &amp; Charter</fullName>
                </value>
                <value>
                    <fullName>Registered Owner</fullName>
                </value>
                <value>
                    <fullName>Yacht Management</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Account_Customer_Account_Number__c</fullName>
        <formula>Parent.Customer_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Customer Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_ID_18_Char__c</fullName>
        <formula>Parent.Acct_ID_18_Char__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>18 Char Parent Acct ID Used for managing data</inlineHelpText>
        <label>Parent Account ID (18 Char)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Record_Type__c</fullName>
        <formula>Parent.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Text__c</fullName>
        <description>GearsCRM field to display Parent Account Name for use in sharing rules / triggers</description>
        <label>Parent Account Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Attribute_Type__c</fullName>
        <inlineHelpText>these attributes corresponds with what appears on the KVH website</inlineHelpText>
        <label>Partner Attribute Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CSN</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Service</fullName>
                </value>
                <value>
                    <fullName>Service Only</fullName>
                </value>
                <value>
                    <fullName>Sales Only</fullName>
                </value>
                <value>
                    <fullName>Live Demo Vehicle</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Detail__c</fullName>
        <label>Partner Detail</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-----------------------------------</fullName>
                </value>
                <value>
                    <fullName>Airtime Provider</fullName>
                </value>
                <value>
                    <fullName>Airtime Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Beneficial Organization</fullName>
                </value>
                <value>
                    <fullName>Dockwalker</fullName>
                </value>
                <value>
                    <fullName>Internet Merchant</fullName>
                </value>
                <value>
                    <fullName>Mass Merchant/Big Box Retailer</fullName>
                </value>
                <value>
                    <fullName>Not Specified</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Owner/Operator</fullName>
                </value>
                <value>
                    <fullName>Prime Contractor</fullName>
                </value>
                <value>
                    <fullName>Reseller/Storefront</fullName>
                </value>
                <value>
                    <fullName>Sales/Rental</fullName>
                </value>
                <value>
                    <fullName>Service Only - Commercial</fullName>
                </value>
                <value>
                    <fullName>Service Only - Commercial &amp; Leisure</fullName>
                </value>
                <value>
                    <fullName>Service Only - Leisure</fullName>
                </value>
                <value>
                    <fullName>Service Only-Logistics Provider</fullName>
                </value>
                <value>
                    <fullName>Service Only-Onboard Maritime</fullName>
                </value>
                <value>
                    <fullName>Service Only-Parts Depot</fullName>
                </value>
                <value>
                    <fullName>Service Only-Repair Depot</fullName>
                </value>
                <value>
                    <fullName>Ship Management/Fleet Owner</fullName>
                </value>
                <value>
                    <fullName>Ship Yard/Boat Builder</fullName>
                </value>
                <value>
                    <fullName>System Integrator</fullName>
                </value>
                <value>
                    <fullName>Value Added Service Provider (VASP)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Portal_Account_Name__c</fullName>
        <description>This has been brought over from SiteCore</description>
        <inlineHelpText>Partner Portal Account Name</inlineHelpText>
        <label>Partner Portal Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Portal_Email__c</fullName>
        <label>Partner Portal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Portal_Main_Contact_Email__c</fullName>
        <formula>Partner_Portal_Main_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Portal Main Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Portal_Main_Contact_Phone__c</fullName>
        <formula>Partner_Portal_Main_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Portal Main Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Portal_Main_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a contact lookup field for the Main Contact that will be displayed in the Partner Portal and Where to Buy.</description>
        <inlineHelpText>This is a contact lookup field for the Main Contact that will be displayed in the Partner Portal and Where to Buy.</inlineHelpText>
        <label>Partner Portal Main Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts Where Partner Portal Main Contact</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Portal_Phone__c</fullName>
        <label>Partner Portal Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Partner_Portal_Secondary_Phone__c</fullName>
        <label>Partner Portal Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Partner_Role_Display_Name__c</fullName>
        <label>Partner Role Display Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Representative</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Role__c</fullName>
        <inlineHelpText>Service Provider resells Airtime Service and Hardware</inlineHelpText>
        <label>Partner Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dealer</fullName>
                    <default>true</default>
                    <label>Dealer</label>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Media Supplier</fullName>
                </value>
                <value>
                    <fullName>Rep</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Sales Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>